--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Thomson's Crisps</title>
       </head>
   <body>
-    <h1>Thomson's</h1>
+    <center><h1>Thomson's</h1></center>
   </body>
 </html>
