--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Thomson's Crisps</title>
+    <link rel="stylesheet" href="main.css">
       </head>
   <body>
     <center><h1>Thomson's</h1></center>
