--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" href="style.css">
       </head>
   <body>
-    <center><h1>Thomson's</h1></center>
+    <center><h1>Thomson's</h1><p>Serving the best ridge cut crisps since 1928</p></center>
   </body>
 </html>
